[package]
name = "tofro-json"
version = "0.1.0"
authors = ["tur461"]
categories = ["encoding", "no-std"]
description = "json serialization & deserialization library"
rust-version = "1.55"

[dependencies]
itoa = "1.0"
mini-internal = { version = "=0.1.27", path = "derive" }
ryu = "1.0"

[dev-dependencies]
automod = "1.0"
indoc = "1.0"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[workspace]
members = ["derive", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = []
