[package]
name = "tracEr"
version = "0.1.0" # remember to update html_root_url
authors = ["tur461"]
categories = ["encoding"]
description = "Path to the element that failed to deserialize"
rust-version = "1.61"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
